--- a/deployment/mlflow/monitoring/prometheus/prometheus.yml
+++ b/deployment/mlflow/monitoring/prometheus/prometheus.yml
@@ -3,5 +3,6 @@ global:
 
 scrape_configs:
   - job_name: "fastapi"
+    metrics_path: "/metrics"
     static_configs:
-      - targets: ["api:80"] # Nombre del servicio + puerto interno
+      - targets: ["api:8000"]
